# AoM-IoT-Bit

./: .gitignore  .gitmodules
Source-Code/IoTBit/: CMakeLists.txt  sdkconfig
Source-Code/IoTBit/components/NC2/: CMakeLists.txt  Client.c  PubSubClient.c  Tokenizer.c  TopicHandler.c
Source-Code/IoTBit/components/NC2/include/: Client.h  PubSubClient.h  PubSubClientInit.h  Tokenizer.h  TopicHandler.h
Source-Code/IoTBit/components/Wifi/: CMakeLists.txt  Wifi.c
Source-Code/IoTBit/main/: CMakeLists.txt  IoTBit.c  Kconfig.projbuild  Mqtt.c
Source-Code/IoTBit/main/include/: Mqtt.h
Source-Code/MessageLayer/: authenticate.proto  battery.proto  channel.proto  configuration.proto  generate.sh  get_channel.proto  heartbeat.proto  network.proto  set_channel.proto  status.proto  wifi.proto
Source-Code/client-configurator/: Dockerfile  config_handler.py  database_schemas.py  docker-compose.yml  env_vars.py  main.py  pub_sub_clients.py  thread_handler.py
Source-Code/client-configurator/application/: database_handler.py  env_vars.py  logger.py  main.py  topic_handler.py
Source-Code/mqtt-server/: docker-compose.yml  rabbitmq.conf
Source-Code/web-service/: Dockerfile  docker-compose.yml  package-lock.json  package.json  server.js
Source-Code/web-service/frontend/: package-lock.json  package.json
Source-Code/web-service/frontend/src/: App.js  endpoints.js
Source-Code/web-service/models/: Client.js  Service.js  User.js
Source-Code/web-service/routes/: auth.js  client.js  user.js
Source-Code/web-service/validation/: register_client.js
(+15 files in other folders)
